# MyTranslation

./: .gitignore  README.md  docker-compose.yml  init_letsencrypt.sh  pyproject.toml  scrapy.cfg
comments/: admin.py  models.py  serializers.py  urls.py
comments/apis/v1/: comment_api.py
comments/services/: comment_service.py
comments/tests/services/: test_comments.py
common/: models.py
config/: celery.py  settings.py  urls.py  views.py
glossaries/: models.py  serializers.py  urls.py
glossaries/apis/v1/: category_api.py  glossary_api.py
glossaries/services/: glossary_service.py
glossaries/tests/services/: test_glossaries.py
namecrawling/: apps.py  items.py  pipelines.py  settings.py  tasks.py
namecrawling/spiders/: name_spider.py
nginx/: Dockerfile  nginx-app.conf  nginx.conf
projects/: admin.py  models.py  serializers.py  tasks.py  urls.py
projects/apis/v1/: project_api.py
projects/tests/services/: test_projects.py
trans/: admin.py  models.py  serializers.py  urls.py  views.py
trans-manager/: .gitignore  Dockerfile
trans-manager/config/: settings.py  views.py
trans-manager/glossaries/: admin.py  apps.py  serializers.py
trans-manager/glossaries/services/: glossary_service.py
trans-manager/namecrawling/: middlewares.py
trans-manager/projects/: models.py
trans-manager/projects/services/: project_service.py
trans-manager/trans/: admin.py  tasks.py
trans-manager/users/: serializers.py
trans/apis/v1/: translation_api.py
trans/services/: translation_service.py
users/: admin.py  models.py  urls.py
(+12 files in other folders)
