[tool.poetry]
name = "trans-manager"
version = "0.1"
description = "managering to tranlation work"
authors = ["bh224 <ericakim224@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
djangorestframework = "^3.14.0"
openpyxl = "^3.1.1"
boto3 = "^1.26.73"

[tool.poetry.dev-dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
